@@ -17,9 +17,7 @@
   -->
 
 <appengine-web-app xmlns="http://appengine.google.com/ns/1.0">
-  <application>analyze-useragent</application>
-  <version>1</version>
-  <threadsafe>false</threadsafe>
+  <threadsafe>true</threadsafe>
   <instance-class>F2</instance-class>
   <runtime>java8</runtime>
 </appengine-web-app>
