@@ -142,4 +142,5 @@ v2.0
 - Rearranged the structure of StepDown (core step in walking around).
 - Added Apache Hive UDF
 - Various performance improvements (overall effect is approx 30% less time needed)
+- Refactored the webapp to use Spring-boot
 
